--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> <!--  VERSÃO DO HTML / 5 -->
-<html lang="pt-br"> <!-- DENTRO FICA O MEU SITE -->
+<!DOCTYPE html> 
+<html lang="pt-br"> 
 
 <head>
     <meta charset="UTF-8">
